# voice-ai

./: ai.py  ai2.py  example.py  main.py  pyproject.toml  speech_trans.py  tts.py  va.py
