[project]
name = "voice-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "googletrans>=4.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "speechrecognition>=3.15.2",
]
